# XenUI

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/: CODEOWNERS
Demos/: .xenconfig  CMakeLists.txt
Demos/HelloXen/: main.cpp
Demos/Res/: app.rc  resource.h
Demos/SVGRendering/: main.cpp
Examples/SimpleWindow/: CMakeLists.txt  main.cpp
Examples/SimpleWindow/Views/: SimpleWindow.xml
Include/XenUI/: App.hpp  EventSystem.hpp  Events.hpp  Export.hpp  NativeWindow.hpp  PlatformWindow.hpp
Include/XenUI/Platform/: X11Window.hpp
Lib/: AppContext.cpp  AppContext.h  AppWindow.cpp  AppWindow.h  ElementAllocator.cpp  ElementAllocator.h  Helpers.inl  Platform.h  RenderTree.cpp  RenderTree.h  Renderer.cpp  Renderer.h  RuntimeError.h  Types.h  XenAPI.h  XenApp.cpp  XenApp.h  XenRenderer.cpp  XenRenderer.h  XenUI.h
Lib/API/: Dialog.cpp  Dialog.h
Lib/UI/: Box.cpp  Box.h  Color.cpp  Color.h  Element.cpp  Element.h  Interactive.h  LinearGradient.cpp  LinearGradient.h  Offset.cpp  Offset.h  Rect.cpp  Rect.h  SVG.cpp  SVG.h  Size.cpp  Size.h  Text.cpp  Text.h  Theme.h  XenBox.cpp  XenBox.h  XenText.cpp  XenText.h
Lib/Widgets/: Widget.cpp  Widget.h
Source/: App.cpp  NativeWindow.cpp
Source/Platform/: X11Window.cpp
Tests/: CMakeLists.txt  test_offset.cpp  test_svg.cpp
